[package]
name = "gobject-subclass"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/sdroege/gst-plugin-rs/tree/master/gobject-subclass"
license = "MIT/Apache-2.0"

[dependencies]
libc = "0.2"
lazy_static = "1.0"
byteorder = "1.0"
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
glib = { git = "https://github.com/gtk-rs/glib" }

[lib]
name = "gobject_subclass"
path = "src/lib.rs"
