[package]
name = "gst-plugin-cdg"
version = "0.5.2"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugin-rs"
license = "MIT/Apache-2.0"
description = "CDG Plugin"
edition = "2018"

[dependencies]
glib = { version = "0.8" }
gstreamer = { version = "0.14", features = ["subclassing", "v1_12"] }
gstreamer-base = { version = "0.14", features = ["subclassing", "v1_12"] }
gstreamer-video = { version = "0.14", features = ["subclassing", "v1_12"] }
gstreamer-app = { version = "0.14" }
cdg = "0.1.0"
cdg_renderer = "0.2"
image = "0.21"
muldiv = "0.2"

[lib]
name = "gstcdg"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
