[package]
name = "gst-plugin-closedcaption"
version = "0.4.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>", "Jordan Petridis <jordan@centricular.com>"]
license = "LGPL-2.1+"
edition = "2018"

[dependencies]
glib = { version = "0.7", features = ["subclassing"] }
combine = "3.6"
either = "1"
uuid = { version = "0.7", features = ["v4"] }
chrono = "0.4"
lazy_static = "1.2"

[dependencies.gst]
version = "0.13"
features = ["subclassing", "v1_12"]
package="gstreamer"

[dependencies.gst-base]
version = "0.13"
features = ["subclassing", "v1_12"]
package="gstreamer-base"

[dependencies.gst-video]
version = "0.13"
features = ["v1_12"]
package="gstreamer-video"

[dev-dependencies]
pretty_assertions = "0.6"
rand = "0.6"

[dev-dependencies.gst-check]
version = "0.13"
package="gstreamer-check"

[lib]
name = "gstrsclosedcaption"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
