[package]
name = "gst-plugin-closedcaption"
version = "0.5.2"
authors = ["Sebastian Dröge <sebastian@centricular.com>", "Jordan Petridis <jordan@centricular.com>"]
license = "LGPL-2.1+"
edition = "2018"
description = "Rust Closed Caption Plugin"
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"

[dependencies]
glib = { version = "0.8", features = ["subclassing"] }
combine = "3.6"
either = "1"
uuid = { version = "0.7", features = ["v4"] }
chrono = "0.4"
lazy_static = "1.2"

[dependencies.gst]
version = "0.14"
features = ["subclassing", "v1_12"]
package="gstreamer"

[dependencies.gst-base]
version = "0.14"
features = ["subclassing", "v1_12"]
package="gstreamer-base"

[dependencies.gst-video]
version = "0.14"
features = ["v1_12"]
package="gstreamer-video"

[dev-dependencies]
pretty_assertions = "0.6"
rand = { version = "0.7", features = ["small_rng"] }

[dev-dependencies.gst-check]
version = "0.14"
package="gstreamer-check"

[lib]
name = "gstrsclosedcaption"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
