[package]
name = "gst-plugin-file"
version = "0.4.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "MIT/Apache-2.0"

[dependencies]
url = "1.1"
glib = { version = "0.7", features = ["subclassing"] }
gstreamer = { version = "0.13", features = ["subclassing"] }
gstreamer-base = { version = "0.13", features = ["subclassing"] }

[lib]
name = "gstrsfile"
crate-type = ["cdylib"]
path = "src/lib.rs"
