[package]
name = "gst-plugin-file"
version = "0.5.2"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "MIT/Apache-2.0"
description = "Rust File Plugin"

[dependencies]
url = "1.1"
glib = { version = "0.8" }
gstreamer = { version = "0.14", features = ["subclassing"] }
gstreamer-base = { version = "0.14", features = ["subclassing"] }

[lib]
name = "gstrsfile"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
