[package]
name = "gst-plugin-flv"
version = "0.4.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
url = "1.1"
glib = { version = "0.7", features = ["subclassing"] }
gstreamer = { version = "0.13", features = ["subclassing"] }
gstreamer-base = { version = "0.13" }
num-rational = { version = "0.2", default-features = false, features = [] }
nom = "4.0"
flavors = {git = "https://github.com/rust-av/flavors.git"}
muldiv = "0.2"
byteorder = "1.0"
lazy_static = "1.0"
smallvec = "0.6"

[lib]
name = "gstrsflv"
crate-type = ["cdylib"]
path = "src/lib.rs"
