[package]
name = "gst-plugin-flv"
version = "0.5.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "MIT/Apache-2.0"
edition = "2018"
description = "Rust FLV Plugin"

[dependencies]
url = "1.1"
glib = { version = "0.8" }
gstreamer = { version = "0.14", features = ["subclassing"] }
gstreamer-base = { version = "0.14" }
num-rational = { version = "0.2", default-features = false, features = [] }
nom = "4.0"
flavors = {git = "https://github.com/rust-av/flavors.git"}
muldiv = "0.2"
byteorder = "1.0"
lazy_static = "1.0"
smallvec = "0.6"

[lib]
name = "gstrsflv"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
