[package]
name = "gst-plugin-http"
version = "0.5.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "MIT/Apache-2.0"

[dependencies]
url = "1.1"
glib = { git = "https://github.com/gtk-rs/glib" }
reqwest = "0.9"
hyperx = "0.15"
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }

[lib]
name = "gstrshttp"
crate-type = ["cdylib"]
path = "src/lib.rs"
