[package]
name = "gst-plugin-rav1e"
version = "0.5.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugin-rs"
license = "MIT/Apache-2.0"
description = "rav1e AV1 Encoder Plugin"
edition = "2018"

[dependencies]
glib = { version = "0.8" }
gstreamer = { version = "0.14", features = ["subclassing"] }
gstreamer-video = { version = "0.14", features = ["subclassing"] }
gstreamer-check = { version = "0.14" }
rav1e = { git = "https://github.com/xiph/rav1e.git", default-features=false }

[lib]
name = "gstrav1e"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
