[package]
name = "gst-plugin-reqwest"
version = "0.6.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "MIT/Apache-2.0"
description = "Rust HTTP Plugin"
edition = "2018"

[dependencies]
url = "2.1"
glib = { git = "https://github.com/gtk-rs/glib" }
reqwest = { version = "0.10", features = ["cookies", "gzip"] }
futures = "0.3"
headers = "0.3"
mime = "0.3"
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
tokio = { version = "0.2", features = ["time", "rt-threaded"] }
lazy_static = "1.0"

[dev-dependencies]
hyper = "0.13.0-alpha"

[lib]
name = "gstreqwest"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
