[package]
name = "gst-plugin-s3"
version = "0.5.2"
authors = ["Arun Raghavan <arun@arunraghavan.net>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugin-rs"
license = "MIT/Apache-2.0"
description = "Amazon S3 Plugin"
edition = "2018"

[dependencies]
bytes = "0.4"
futures = "0.1"
glib = { version = "0.8" }
gstreamer = { version = "0.14", features = ["subclassing", "v1_12"] }
gstreamer-base = { version = "0.14", features = ["subclassing", "v1_12"] }
rusoto_core = "0.40"
rusoto_s3 = "0.40"
url = "1.7"
tokio = "0.1"

[lib]
name = "gsts3"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
