[package]
name = "gst-plugin-s3"
version = "0.6.0"
authors = ["Arun Raghavan <arun@arunraghavan.net>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugin-rs"
license = "MIT/Apache-2.0"
description = "Amazon S3 Plugin"
edition = "2018"

[dependencies]
bytes = "0.4"
futures = "0.1"
glib = { git = "https://github.com/gtk-rs/glib" }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
rusoto_core = "0.40"
rusoto_s3 = "0.40"
url = "2"
percent-encoding = "2"
tokio = "0.1"

[lib]
name = "gsts3"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
