[package]
name = "gst-plugin-simple"
version = "0.3.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/sdroege/gst-plugin-rs"
license = "MIT/Apache-2.0"

[dependencies]
url = "1.1"
glib = { git = "https://github.com/gtk-rs/glib" }
gobject-subclass = { git = "https://github.com/sdroege/gobject-subclass" }
gst-plugin = { path="../gst-plugin" }
gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }

[lib]
name = "gst_plugin_simple"
path = "src/lib.rs"
