[package]
name = "gst-plugin-simple"
version = "0.3.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/sdroege/gst-plugin-rs"
license = "MIT/Apache-2.0"

[dependencies]
url = "1.1"
glib = "0.6"
gobject-subclass = "0.2"
gst-plugin = { version = "0.3", path="../gst-plugin" }
gstreamer = "0.12"
gstreamer-base = "0.12"

[lib]
name = "gst_plugin_simple"
path = "src/lib.rs"
