[package]
name = "gst-plugin-sodium"
version = "0.1.0"
authors = ["Jordan Petridis <jordan@centricular.com>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugin-rs"
description = "libsodium-based file encryption and decryption"
edition = "2018"

[dependencies]
glib = { version = "0.8" }
gst = { version = "0.14", features = ["subclassing", "v1_14"], package="gstreamer" }
gst-base = { version = "0.14", features = ["subclassing", "v1_14"], package = "gstreamer-base" }
sodiumoxide = "0.2.1"
lazy_static = "1.3.0"
hex = "0.3.2"
smallvec = "0.6"

# example
clap = { version = "2.33", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
pretty_assertions = "0.6"
rand = "0.7"

[dev-dependencies.gst-check]
version = "0.14"
package="gstreamer-check"

[dev-dependencies.gst-app]
version = "0.14"
package="gstreamer-app"

[lib]
name = "gstsodium"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "generate-keys"
path = "examples/generate_keys.rs"
required-features = ["serde", "serde_json", "clap"]

[[example]]
name = "encrypt-example"
path = "examples/encrypt_example.rs"
required-features = ["serde", "serde_json", "clap"]

[[example]]
name = "decrypt-example"
path = "examples/decrypt_example.rs"
required-features = ["serde", "serde_json", "clap"]

[build-dependencies]
gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
