[package]
name = "gst-plugin-threadshare"
version = "0.5.2"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
license = "LGPL-2.1+"
description = "Threadshare Plugin"
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"

[dependencies]
libc = "0.2"
glib-sys = { version = "0.9" }
gobject-sys = { version = "0.9" }
gio-sys = { version = "0.9" }
gstreamer-sys = { version = "0.8" }
glib = { version = "0.8", features = ["subclassing"] }
gio = { version = "0.7" }
gstreamer = { version = "0.14", features = ["subclassing"] }
gstreamer-app = { version = "0.14" }
gstreamer-check = { version = "0.14" }
gstreamer-net = { version = "0.14" }

tokio = "0.1"
tokio-reactor = "0.1"
tokio-executor = "0.1"
tokio-timer = "0.2"
tokio-current-thread = "0.1"
futures = "0.1"
lazy_static = "1.0"
either = "1.0"
rand = "0.7"
net2 = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "processthreadsapi"] }

[lib]
name = "gstthreadshare"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "udpsrc-benchmark-sender"
path = "examples/udpsrc_benchmark_sender.rs"

[[example]]
name = "tcpclientsrc-benchmark-sender"
path = "examples/tcpclientsrc_benchmark_sender.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
