[package]
name = "gst-plugin-togglerecord"
version = "0.4.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
license = "LGPL-2.1+"

[dependencies]
glib = { version = "0.7", features = ["subclassing"] }
gstreamer = { version = "0.13", features = ["subclassing"] }
gstreamer-video = { version = "0.13" }
gtk = { version = "0.6", optional = true }
gio = { version = "0.6", optional = true }
parking_lot = "0.7"

[dev-dependencies]
either = "1.0"

[lib]
name = "gsttogglerecord"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "gtk-recording"
path = "examples/gtk_recording.rs"
required-features = ["gtk", "gio"]
