[package]
name = "gst-plugin-togglerecord"
version = "0.5.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
license = "LGPL-2.1+"
description = "Toggle Record Plugin"
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
edition = "2018"

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib", features = ["subclassing"] }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gtk = { git = "https://github.com/gtk-rs/gtk", optional = true }
gio = { git = "https://github.com/gtk-rs/gio", optional = true }
parking_lot = "0.8"

[dev-dependencies]
either = "1.0"

[lib]
name = "gsttogglerecord"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "gtk-recording"
path = "examples/gtk_recording.rs"
required-features = ["gtk", "gio"]

[build-dependencies]
gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
