[package]
name = "gst-plugin-togglerecord"
version = "0.5.2"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
license = "LGPL-2.1+"
description = "Toggle Record Plugin"
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
edition = "2018"

[dependencies]
glib = { version = "0.8", features = ["subclassing"] }
gstreamer = { version = "0.14", features = ["subclassing"] }
gstreamer-video = { version = "0.14" }
gtk = { version = "0.7", optional = true }
gio = { version = "0.7", optional = true }
parking_lot = "0.8"

[dev-dependencies]
either = "1.0"

[lib]
name = "gsttogglerecord"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "gtk-recording"
path = "examples/gtk_recording.rs"
required-features = ["gtk", "gio"]

[build-dependencies]
gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
